fix du bug iphone homepage menu wont overflow test1

--- a/css/fullpage.css
+++ b/css/fullpage.css
@@ -12,7 +12,7 @@ html.fp-enabled,
 .fp-enabled body {
     margin: 0;
     padding: 0;
-    overflow:hidden;
+   /*overflow:hidden;*/
 
     /*Avoid flicker on slides transitions for mobile phones #336 */
     -webkit-tap-highlight-color: rgba(0,0,0,0);
