--- a/style.css
+++ b/style.css
@@ -641,6 +641,7 @@ padding: 0;
 	width: 100%;
 	height: 100%;
 	position: fixed;
+	overflow: auto;
 	top: 0;
 	left: 0;
 	padding-top: 10%;/*20%;*/
